Added capital convert_to inlines for standardization, added more hoarder QOL for managing vault, added more descriptions of vault effects, added effect when vault is destroyed, fixed broken shackles modifiers, fixed game start resource distribution, fixed some more events related to idiology and creating vassals

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -950,6 +950,11 @@ tec_jump_empty:0 "\n\n"
  decision_tec_manage_vault_desc: "Managing the vault assets is a thorough and difficult job, however its necessity is paramount in an universe with finite resources."
  decision_tooltip_tec_manage_vault_effects: "Open the Vault management screen"
 
+ MESSAGE_TEC_VAULT_DESTROYED_TITLE:0 "Vault Destroyed"
+ MESSAGE_TEC_VAULT_DESTROYED:1 "The Vault of Plenty of $PLANET|Y$ has been demolished or destroyed, the following resources have been able to be recovered:\n\n$tec_loc_minerals$: [This.tec_minerals_recovered]\n$tec_loc_food$: [This.tec_food_recovered]\n$tec_loc_alloys$: [This.tec_alloys_recovered]\n$tec_loc_consumer_goods$: [This.tec_consumer_goods_recovered]\n$tec_loc_rare_crystals$: [This.tec_rare_crystals_recovered]\n$tec_loc_exotic_gases$: [This.tec_exotic_gases_recovered]\n$tec_loc_volatile_motes$: [This.tec_volatile_motes_recovered]\n$tec_loc_minor_artifacts$: [This.tec_minor_artifacts_recovered]"
+
+
+
  tec_empty_stockpile_loc: "\n§RNo resources in vault§!"
  tec_minerals_stockpile_loc: "\n$tec_loc_minerals$: [This.tec_minerals_stockpile]"
  tec_food_stockpile_loc: "\n$tec_loc_food$: [This.tec_food_stockpile]"
@@ -963,19 +968,21 @@ tec_jump_empty:0 "\n\n"
 
  building_tec_vault_of_plenty: "Vault of Plenty"
  building_tec_vault_of_plenty_desc: "A massive storage facility that can hold vast quantities of surplus resources, including food, minerals, advanced technologies, and strategic resources. It is a testament to the ingenuity and resourcefulness of its builders, who have developed advanced storage and preservation techniques to ensure the stability and prosperity of their civilization, and safe storage."
- building_tec_vault_of_plenty_effect_desc: "\nCapacity scales with §Y$mod_country_resource_max_add$§!\nStockpiled Resources (max [tec_vault_max_capacity]):[tec_empty_stockpile_loc][tec_minerals_stockpile_loc][tec_food_stockpile_loc][tec_alloys_stockpile_loc][tec_consumer_goods_stockpile_loc][tec_rare_crystals_stockpile_loc][tec_exotic_gases_stockpile_loc][tec_volatile_motes_stockpile_loc][tec_minor_artifacts_stockpile_loc]"
+ building_tec_vault_of_plenty_effect_desc: "\nCapacity scales with §Y$MNOD_COUNTRY_RESOURCE_MAX_ADD$§!\nStockpiled Resources (max [tec_vault_max_capacity] each):[tec_empty_stockpile_loc][tec_minerals_stockpile_loc][tec_food_stockpile_loc][tec_alloys_stockpile_loc][tec_consumer_goods_stockpile_loc][tec_rare_crystals_stockpile_loc][tec_exotic_gases_stockpile_loc][tec_volatile_motes_stockpile_loc][tec_minor_artifacts_stockpile_loc]"
+ building_tec_vault_of_plenty_no_deposit_effect_desc: "\n§RWe cannot operate the vault at full capacity, due to missing expertise, making us unable to deposit, only withdraw.§!"
+ building_tec_vault_not_hoarder_effect_desc: "\n§YVault effect below is halved due to Vault of Plenty not functioning at full capacity.§!"
 
  building_tec_vault_of_acquisition: "Vault of Acquisition"
  building_tec_vault_of_acquisition_desc: "A section of the Vault of Plenty dedicated to reinvestment and smart utilization of resources for the purpose of creating more material wealth."
- building_tec_vault_of_acquisition_effect_desc: "This £building£ §YBuilding§! generates a trickle of resources depending on the stockiple of resources present in the Vault of Plenty"
+ building_tec_vault_of_acquisition_effect_desc: "\nThis £building£ §YBuilding§! generates a trickle of resources depending on the stockiple of resources present in the Vault of Plenty"
 
  building_tec_vault_of_unity: "Vault of Unity"
  building_tec_vault_of_unity_desc: "A grandiose section of the Vault of Plenty that houses a treasure trove of opulent artifacts, ranging from rare works of art to intricate musical instruments and other expressions of cultural wealth. It is a testament to the lavish tastes and indulgences of its builders, who have spared no expense in gathering and preserving the finest and most exquisite examples of their civilization's cultural heritage."
- building_tec_vault_of_unity_effect_desc: "This £building£ §YBuilding§! generates §Y$tec_loc_unity$§! depending on the stockiple of resources present in the Vault of Plenty"
+ building_tec_vault_of_unity_effect_desc: "\nThis £building£ §YBuilding§! generates §Y$tec_loc_unity$§! depending on the stockiple of resources present in the Vault of Plenty"
 
  building_tec_vault_of_wealth: "Vault of Wealth"
  building_tec_vault_of_wealth_desc: "A section of the Vault of Plenty that houses a state-of-the-art trading hub that enables its owners to maximize the value of their vast material resources. Equipped with advanced market analysis tools and cutting-edge trading algorithms, it can identify the most profitable trade deals and exchanges in real-time, ensuring that its owners get the best possible returns on their investments."
- building_tec_vault_of_wealth_effect_desc: "This £building£ §YBuilding§! generates §Y$tec_loc_trade_value$§! depending on the stockiple of resources present in the Vault of Plenty"
+ building_tec_vault_of_wealth_effect_desc: "\nThis £building£ §YBuilding§! generates §Y$tec_loc_trade_value$§! depending on the stockiple of resources present in the Vault of Plenty"
 
 # ----- Corpo civics
 
