--- a/localisation/english/zz_evolved_events_lore_l_english.yml
+++ b/localisation/english/zz_evolved_events_lore_l_english.yml
@@ -870,7 +870,7 @@ tec_origin.122.a.tooltip:0 "The location of a suitable system is revealed, colon
 # Hoarders
 
  tec_hoarders.1.title: "Vault of Plenty"
- tec_hoarders.1.desc: "Currently the vault stockpiles the following resources:\n\n[tec_minerals_stockpile_loc][tec_food_stockpile_loc][tec_alloys_stockpile_loc][tec_consumer_goods_stockpile_loc][tec_rare_crystals_stockpile_loc][tec_exotic_gases_stockpile_loc][tec_volatile_motes_stockpile_loc][tec_minor_artifacts_stockpile_loc]"
+ tec_hoarders.1.desc: "Currently the vault stockpiles the following resources:\n[tec_empty_stockpile_loc][tec_minerals_stockpile_loc][tec_food_stockpile_loc][tec_alloys_stockpile_loc][tec_consumer_goods_stockpile_loc][tec_rare_crystals_stockpile_loc][tec_exotic_gases_stockpile_loc][tec_volatile_motes_stockpile_loc][tec_minor_artifacts_stockpile_loc]"
 
  tec_hoarders.1.minerals: "Manage $tec_loc_minerals$"
  tec_hoarders.1.food: "Manage $tec_loc_food$"
@@ -880,15 +880,18 @@ tec_origin.122.a.tooltip:0 "The location of a suitable system is revealed, colon
  tec_hoarders.1.exotic_gases: "Manage $tec_loc_exotic_gases$"
  tec_hoarders.1.volatile_motes: "Manage $tec_loc_volatile_motes$"
  tec_hoarders.1.minor_artifacts: "Manage $tec_loc_minor_artifacts$"
+ tec_hoarders.1.withdraw: "Withdraw All Resources"
  tec_hoarders.1.exit: "Exit Vault of Plenty"
 
  tec_hoarders.2.title: "Manage [tec_vault_managed_resource]"
- tec_hoarders.2.desc: "Max Stockpile Capacity: TODO[This.tec_vault_managed_resource_stockpile]\n\nChange in balance: [This.tec_stockpile_change]"
+ tec_hoarders.2.desc: "Max Stockpile Capacity: [tec_vault_max_capacity][This.tec_vault_managed_resource_stockpile]\n\nChange in balance: [This.tec_stockpile_change]"
 
+ tec_hoarders.2.max: "Deposit Max"
  tec_hoarders.2.10000: "Deposit 10000"
  tec_hoarders.2.1000: "Deposit 1000"
  tec_hoarders.2.500: "Deposit 500"
  tec_hoarders.2.100: "Deposit 100"
+ tec_hoarders.2.withdraw: "Withdraw All"
  tec_hoarders.2.n10000: "Withdraw 10000"
  tec_hoarders.2.n1000: "Withdraw 1000"
  tec_hoarders.2.n500: "Withdraw 500"
@@ -899,7 +902,7 @@ tec_origin.122.a.tooltip:0 "The location of a suitable system is revealed, colon
  tec_hoarders.2.not_enough_resources: "Not enough resources in stockpile to deposit!"
  tec_hoarders.2.not_enough_stockpile: "Not enough resources in vault to withdraw!"
  tec_hoarders.2.not_enough_vault_cap: "Not enough vault stockpile capacity!"
-
+ tec_hoarders.2.not_hoarder: "Not available to non-Hoarder empires."
 #Debug things
  elysium:0 "Elysium"
  Ruined:0 "Ruined"
