meged changes ASSIMILATIONS STILL BORKED

--- a/localisation/english/replace/!_evolved_to_do_R7_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R7_l_english.yml
@@ -2,3 +2,10 @@
 #R7 - Espionage patch
 
 # check action.330
+
+# ------------------------------------------------- APS
+	ap_tec_undead_mastery:0 "Necrotic Might"
+	ap_tec_undead_mastery_desc:0 "TO DO"
+	ap_tec_undead_mastery_effects:0 "Allows the upgrade of Zombie  assembly buildings, enormously increasing zombie pop assembly.\nUnlocks Necrotic buildings, which allow dynamic complex jobs usable by zombie pops, increased by $tec_loc_capital_tier$ and used districts and buildings.\n."
+
+
