--- a/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
@@ -2,6 +2,7 @@
 #R8 - ??? Patch
 
 
+# Archaeotech
 	building_tec_archaeo_kohn_anchor:0 "Reality Anchor"
 	building_tec_archaeo_kohn_anchor_desc:0 "TO DO."
 	building_tec_archaeo_kohn_anchor_effect:0 "TO DO"
@@ -21,3 +22,26 @@
 	building_tec_archaeo_schzedani_bulwark:0 "Obsidian Bulwark"
 	building_tec_archaeo_schzedani_bulwark_desc:0 "TO DO."
 	building_tec_archaeo_schzedani_bulwark_effect:0 "TO DO"
+
+# Relics
+	r_tec_kohn_tesseract:0 "Kohn Tesseract"
+	r_tec_kohn_desc:0 "An undescribable artifact reflecting the collapse of infinite realities, both irradiating and consuming immense amounts of energy in an inert way. It's one of multiple tesseracts created by the Kohn Architects to traverse through potential realities, without leaving a trace of their existence."
+	r_tec_kohn_tesseract_effect:0 "Tear a rift in the continuum of space, time and uni-multidimensional interconnection, generating £trigger_tec_warning£ §YUnknown§! effects."
+
+	r_tec_rodian_a:0 "A"
+	r_tec_rodian_a_desc:0 "A"
+	r_tec_rodian_a_effect:0 "A."
+
+	r_tec_qidanium_brain:0 "Qidanium Brain"
+	r_tec_qidanium_brain_desc:0 "Probably the last intact brain of the Qidanium Hive, a biomechanical collective that collapsed eons ago without a explicit reason. Even with it being relatively small, contains an entire database of knowledge hoarded through millennia and a remain of the collective consciousness in permanent stasis."
+	r_tec_qidanium_brain_effect:0 "Connects the Brain using it as a unique super processor, increasing our  £trigger_tec_research£ §YResearch§! capabilities."
+
+	r_tec_schzedani_crucible:0 "Schzedani Crucible"
+	r_tec_schzedani_crucible_desc:0 "Probably the last intact brain of the Qidanium Hive, a biomechanical collective that collapsed eons ago without a explicit reason. Even with it being relatively small, contains an entire database of knowledge hoarded through millennia and a remain of the collective consciousness in permanent stasis."
+	r_tec_schzedani_crucible_effect:0 "Connects the Brain using it as a unique super processor, increasing our  £trigger_tec_research£ §YResearch§! capabilities."
+
+# ???
+	precursor_loc_00X:0 ""
+	precursor_loc_00X_desc:0 ""
+
+# /
