--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -1474,7 +1474,7 @@
 
  civic_tec_mecha_automation:0 "§E§!Productive Automation"
  civic_tec_mecha_automation_desc:0 "§EMechanist Origin Exclusive Civic§!\n\nMost of the industrial backbone of this species rely on a high and efficient automation, using state-of-the-art machines to create, maintain and produce a big part of the logistic lines of the empire."
- civic_tooltip_tec_mecha_automation_effects:0 "£district£ Generator, Mining and Farming Districts §Yproduce§! a moderate amount of their respective £trigger_tec_basic_resources£ §YBasic Resource§!, which §Yscale§! with technologies and modifiers, but also provide §R1§! less £job£ Job and £housing£ Housing.\nThe empire capital starts with §R5§! less organic pops.\n§HThis effect can be enabled or disabled with a planetary decision.§!\n\n"
+ civic_tooltip_tec_mecha_automation_effects:0 "£district£ Generator, Mining and Farming Districts §Yproduce§! a moderate amount of their respective £trigger_tec_basic_resources£ §YBasic Resource§!, which §Yscale§! with technologies and modifiers, but also provide §R1§! fewer £job£ Job and £housing£ Housing.\nThe empire capital starts with §R5§! less organic pops.\n§HThis effect can be enabled or disabled with a planetary decision.§!\n\n"
 
 # Syncretic Evolution
 # ------------------------------------------------------------
