--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -972,8 +972,8 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
 
 # --------------- ETHEREAL ASCENSION TRAITS ----------------------
 # T2
- trait_tec_ethereal:0 "Ethereal"
- trait_tec_ethereal_desc:0 "§LFree of mortal and biological constraints, this species is made of pure sheer psionic energy manifested as pseudo plasmatic entity.§!"
+ trait_tec_ethereal_main:0 "Ethereal"
+ trait_tec_ethereal_main_desc:0 "§LFree of mortal and biological constraints, this species is made of pure sheer psionic energy manifested as pseudo plasmatic entity.§!"
 
 	# posession
  trait_tec_ethereal_posession_mechanics:0 "Haunted Machinery"
@@ -1776,12 +1776,6 @@ tec_aiauth_error_minor_bonus_used:0 "§RERROR : All available protocols are alre
  sr_tec_biomass_desc:0 "Each single existing creature is nothing but material to build new assets for our collective."
 
 
-
-
-
-
-
-
 # Debug
  leader_trait_tec_debug_immortal:0 "Immortal leader"
  leader_trait_tec_debug_immortal_desc:0 "Long live to this leader."
@@ -1793,89 +1787,105 @@ tec_aiauth_error_minor_bonus_used:0 "§RERROR : All available protocols are alre
 
 
 # assimilation Rules
- TEC_HIVEPOPS_HIVE_ASSIMILATION:0 "$TRIGGER_FAIL$Requires a degree of §YEvolutionary mastery§!, §YKnowledge of Cybernetics§! or §YPsionic Entanglement§! for assimilating this species."
 
- TEC_HIVEPOPS_REQUIRE_BIO:0 "$lonely_hive_mind_pops_kill_themselves_citizenship$ Requires §YBiological Assimilation§!, §YCybernetic Augmentations§!, §YPsionic Assimilation§! or a way to be converted into §YReplicants§! in order to be re-integrated."
+ # Requirements
+	TEC_HIVEPOPS_HIVE_ASSIMILATION:0 "$TRIGGER_FAIL$Requires a degree of §YEvolutionary mastery§!, §YKnowledge of Cybernetics§! or §YPsionic Entanglement§! for assimilating this species."
 
- TEC_HIVEPOPS_HIVE_ASSIMILATION:0 "$TRIGGER_FAIL$Requires a degree of §YEvolutionary mastery§!, §YKnowledge of Cybernetics§! or §YPsionic Entanglement§! for assimilating this species."
+	TEC_HIVEPOPS_REQUIRE_BIO:0 "$lonely_hive_mind_pops_kill_themselves_citizenship$ Requires §YBiological Assimilation§!, §YCybernetic Augmentations§!, §YPsionic Assimilation§! or a way to be converted into §YReplicants§! in order to be re-integrated."
 
- TEC_HIVEPOPS_HIVE_BIO:0 "$TRIGGER_FAIL$Only Organic species can be assimilated as our genetic perfected §YSpecies§!."
+	TEC_HIVEPOPS_HIVE_ASSIMILATION:0 "$TRIGGER_FAIL$Requires a degree of §YEvolutionary mastery§!, §YKnowledge of Cybernetics§! or §YPsionic Entanglement§! for assimilating this species."
 
- TEC_HIVEPOPS_ALREADY_HIVEMINDED_BIO:0 "$TRIGGER_FAIL$This species is already part of the Collective."
-
- # Cyborgs
- TEC_CYBORGS_MUST_BE_ORGANIC:1 "$TRIGGER_FAIL$Only fully §Yorganic§! species can be cybernetically assimilated."
-
- TEC_CYBORGS_CANT_BE_CYBORGD:1 "$TRIGGER_FAIL$Already Cybernetically augmented organisms can't be §Yassimilated§!, only upgraded."
-
- # Synths
- TEC_SYNTHS_MECHANIC_CONVERSION:1 "$TRIGGER_FAIL$Only xeno-mechanic lifeforms can be §Yassimilated§! into new synths."
-
-	# Has psionic trait over other psionic variants
- TEC_HIGHER_PSIONIC_POTENTIAL:0 "$TRIGGER_FAIL$This species display an unusual amount of psionic capacities. We can't truly understand it or how to adapt our biology to them."
- 
- # Replicants
- TEC_CAN_ONLY_ASSIMILATE_NON_REPLICANTS:0 "$TRIGGER_FAIL$Only non §YReplicant§! species can be assimilated."
-
- # Cyberpsionics
- TEC_PSICYBORGS_MUST_BE_ORGANIC:0 "$TRIGGER_FAIL$Only fully §Yorganic§! species can be cyber-psionically assimilated."
- TEC_PSICYBORGS_CANT_BE_CYBORGD:0 "$TRIGGER_FAIL$Already Psi-Cybernetically augmented organisms can't be §YAssimilated§!."
-
- # Pure of form
- TRANSCENDING_SPECIES_ALREADY_PUREFORM:0 "$TRIGGER_FAIL$Already §YPure of Form§! species can be assimilated."
-
- # Energy entities
- TEC_ENERGY_ENTITIES_CANT_ASSIMILATE:0 "$TRIGGER_FAIL$Energy entities can't be assimilated."
-
- # - ---------------------- Secondary secies assimilations ---------------------- - 
 	# Robots into machines
- TEC_ROBOTS_INTO_MACHINES_REQUIRE_TECH:0 "$TRIGGER_FAIL$These units are obsolete. Requires §Y$tech_robomodding_m$§! in order to §YAdapt§! them to suit our drone composition."
+	TEC_ROBOTS_INTO_MACHINES_REQUIRE_TECH:0 "$TRIGGER_FAIL$These units are obsolete. Requires §Y$tech_robomodding_m$§! in order to §YAdapt§! them to suit our drone composition."
 
 	# Machines into robots
- TEC_MACHINE_INTO_ROBOTS_REQUIRE_TECH:0 "$disconnected_machine_pops_kill_themselves_citizenship$ Requires §Y$tech_robomodding$§! in order to §YAdapt§! these units to our robotic templates."
-
-
-	# Bioservants can't be psionic
- TEC_CRAFTED_SPECIES_CANT_BE_PSIONIC:0 "$TRIGGER_FAIL$Crafted species can't develop psionic powers."
-
- TEC_ROBOT_UNIFICATION_REQUIRE_TECH:0 "$TRIGGER_FAIL$Robotic species can be unified if desired. Requires §Y$tech_droid_workers$§! in order to be able to §YUnify§! all machine units to our created species."
-
- TEC_BIOSERVANTS_UNIFICATION_REQUIRE_TECH:0 "$TRIGGER_FAIL$Bioengineered species can be unified if desired. Requires §Y$tech_gene_tailoring$§! in order to §YUnify§! all them to our own created species."
-
-
+	TEC_MACHINE_INTO_ROBOTS_REQUIRE_TECH:0 "$disconnected_machine_pops_kill_themselves_citizenship$ Requires §Y$tech_robomodding$§! in order to §YAdapt§! these units to our robotic templates."
+ # /
 
 # Assimilation tooltips
- TEC_POP_CONVERT_INTO_MAIN_SPECIES_MACHINE:0 "This species will be converted into our §YMain§! template of drones."
- TEC_POP_WILL_GAIN_CYBERNETIC_TRAIT:0 "This species will be §YCybernetically§! enhanced."
- TEC_POP_WILL_CONVERT_INTO_ROBOTIC_CRAFTED_SPECIES:0 "This species will be recycled into our main §YRobotic§! species template."
- TEC_POP_WILL_GAIN_HIVE_TRAIT:0 "This species will be integrated in the collective, gaining a §YHive-Minded§! connection."
- TEC_POP_WILL_LOSE_HIVE_TRAIT:0 "This species will be lose its §YHive-Minded§! connection."
- TEC_POP_WILL_CONVERT_INTO_MAIN_SPECIES:0 "This species will be converted into members of our §YOwn Species§!."
- TEC_POP_WILL_CONVERT_INTO_MAIN_SPECIES_SYNTH:0 "This species will be provided with new §YSynthetic§! bodies."
- TEC_POP_WILL_GAIN_CYBERNETIC_AND_PSIONIC_TRAIT:0 "This species will be §YCyber-Psionically§! enhanced."
- TEC_POP_WILL_GAIN_PUREFORM_TRAIT:0 "This species will reach §YPurity of Form§!."
+ # Total assimilation
+	TEC_ASSIMILATION_WILL_CONVERT_INTO_MAIN_SPECIES:0 "This species will be converted into members of our §YOwn Species§!."
+	TEC_ASSIMILATION_WILL_CONVERT_INTO_MAIN_SPECIES_SYNTH:0 "This species will be provided with new §YSynthetic§! bodies."
+ # Crafted species
+	TEC_ROBOT_ASSIMILATION_REQUIRE_TECH:0 "$TRIGGER_FAIL$Robotic species can be unified if desired. Requires §Y$tech_droid_workers$§! in order to be able to §YUnify§! all machine units to our created species."
+	TEC_ASSIMILATION_CONVERT_INTO_MAIN_SPECIES_MACHINE:0 "This species will be converted into our §YMain§! template of drones."
+	TEC_ASSIMILATION_WILL_CONVERT_INTO_ROBOT_CRAFTED_SPECIES:0 "This species will be recycled into our main §YRobotic§! species template."
+	TEC_ASSIMILATION_MAIN_ROBOT_CANT_BE_ASSIMILATED:0 "$TRIGGER_FAIL$This species is our main §YRobotic§! species template."
 
- TEC_MAIN_ROBOT_CANT_BE_ASSIMILATED:0 "$TRIGGER_FAIL$This species is our main §YRobotic§! species template."
- TEC_MAIN_BIOSERVANT_CANT_BE_ASSIMILATED:0 "$TRIGGER_FAIL$This species is our main §YBioservant§! species template."
+	TEC_BIOSERVANT_ASSIMILATION_REQUIRE_TECH:0 "$TRIGGER_FAIL$Bioengineered species can be unified if desired. Requires §Y$tech_gene_tailoring$§! in order to §YUnify§! all them to our own created species."
+	TEC_ASSIMILATION_MAIN_BIOSERVANT_CANT_BE_ASSIMILATED:0 "$TRIGGER_FAIL$This species is our main §YBioservant§! species template."
+ # Hivemind
+	TEC_HIVE_ASSIMILATION_ONLY_BIO:0 "$TRIGGER_FAIL$Only Organic species can be assimilated as our §YSpecies§!."
+	TEC_HIVE_ASSIMILATION_ALREADY_HIVEMINDED:0 "$TRIGGER_FAIL$This species is already part of the Collective."
+	TEC_ASSIMILATION_WILL_GAIN_HIVE_TRAIT:0 "This species will be integrated in the collective, gaining a §YHive-Minded§! connection."
+	TEC_ASSIMILATION_WILL_LOSE_HIVE_TRAIT:0 "This species will lose its §YHive-Minded§! connection."
+ # Synths
+	TEC_SYNTH_ASSIMILATION_INVALID_ROBOT:1 "$TRIGGER_FAIL$Only xeno-mechanic lifeforms can be §Yassimilated§! into new synths."
+ # Genetic perfection
+	TEC_ASSIMILATION_GENEPERF_CONVERT_INTO_MAIN_SPECIES:1 "This species can be genetically altered into our §YMain Species§!."
+	TEC_ASSIMILATION_WILL_GAIN_GENEPERFECTION_TRAIT:1 "This species is able to reach §YGenetic Perfection§!."
+	TEC_ASSIMILATION_ALREADY_GENEPERFECTION:1 "$TRIGGER_FAIL$This species is already §YGenetically Perfect§!."
+	TEC_ASSIMILATION_WILL_LOSE_GENEPERFECTION:1 "This species will lose its artificial §YGenetic Perfection§!."
+ # Cybernetics
+	TEC_CYBORG_ASSIMILATION_REQUIRE_ORGANICS:1 "$TRIGGER_FAIL$Only fully §Yorganic§! species can be cybernetically assimilated."
+	TEC_ASSIMILATION_WILL_GAIN_CYBERNETIC_TRAIT:0 "This species will be §YCybernetically§! enhanced."
+	TEC_ASSIMILATION_WILL_UPGRADE_CYBERNETIC_TRAIT:0 "This species will upgrade its §YCybernetic§! implants."
+	TEC_ASSIMILATION_WILL_LOSE_CYBERNETIC_TRAIT:0 "This species will get free of its §YCybernetic§! implants."
+	TEC_ASSIMILATION_ALREADY_CYBORG:1 "$TRIGGER_FAIL$Already Cybernetically augmented organisms can't be §Yassimilated§!, only upgraded."
+ # Advanced cybernetic
+	TEC_ASSIMILATION_WILL_GAIN_ADVANCED_CYBERNETIC_TRAIT:0 "This species will gain §YAdvanced Cybernetics§!."
+	TEC_ASSIMILATION_ALREADY_ADVANCED_CYBORG:0 "$TRIGGER_FAIL$This species already have §YAdvanced Cybernetic§! implants."
+ # Psionics
+	TEC_ASSIMILATION_WILL_GAIN_PSIONIC_TRAIT:0 "This species will get its §MPsionic§! powers awakened."
+	TEC_ASSIMILATION_ALREADY_PSIONIC:0 "$TRIGGER_FAIL$This species already display psionic capacities compatible with our own."
+	TEC_ASSIMILATION_INVALID_PSIONIC_CRAFTED_SPECIES:0 "$TRIGGER_FAIL$Artificial species cannot develop psionic powers."
+ # Cyberpsionic
+	TEC_CYBERPSIONIC_ASSIMILATION_REQUIRE_ORGANICS:0 "$TRIGGER_FAIL$Only fully §Yorganic§! species can be cyber-psionically assimilated."
+	TEC_ASSIMILATION_WILL_GAIN_CYBERPSIONIC_TRAIT:0 "This species will be §YCyber-Psionically§! enhanced."
+	TEC_ASSIMILATION_WILL_UPGRADE_CYBERPSIONIC_TRAIT:0 "This species will ugprade its cybernetic implants with §YCyber-Psionically§! ones."
+	TEC_ASSIMILATION_ALREADY_CYBERPSIONIC:0 "$TRIGGER_FAIL$This species already have §YCyber-Psionic§! implants."
+ # Biopsionic
+	TEC_ASSIMILATION_WILL_GAIN_BIOPSIONIC_TRAIT:0 "This species will reach a total §YPurity of Form§!."
+	TEC_ASSIMILATION_ALREADY_BIOPSIONIC:0 "$TRIGGER_FAIL$Already §YPure of Form§! species cannot be assimilated."
+ # Replicant
+	TEC_REPLICANT_ASSIMILATION_NOT_MAIN:0 "$TRIGGER_FAIL$Only non §YReplicant§! species can be assimilated."
+ # Bionic
+	TEC_ASSIMILATION_WILL_GAIN_BIONIC_TRAIT:0 "This species will be §YBionically§! improved."
+	TEC_ASSIMILATION_ALREADY_BIONIC:0 "$TRIGGER_FAIL$Already improved by §YBionic§! implants, cannot be assimilated."
+	TEC_ASSIMILATION_WILL_LOSE_BIONIC_TRAIT:0 "This species will get free of its §YBionic§! implants."
+ # Biogenic
+	TEC_ASSIMILATION_BIOGENIC_XENOCYTES:0 "This species can be harvested for §YBio-Mutagenically§! improved."
+	TEC_ASSIMILATION_WILL_GAIN_BIOGENIC_TRAIT:0 "This species will be §YBio-Mutagenically§! improved."
+	TEC_ASSIMILATION_ALREADY_BIOGENIC:0 "$TRIGGER_FAIL$Already improved by §YBiogenic Mutagens§!, cannot be assimilated."
+	TEC_ASSIMILATION_WILL_LOSE_BIOGENIC_TRAIT:0 "This species will get free of its §YBiogenic Mutagens§!."
+ # Psychic
+	TEC_ASSIMILATION_WILL_GAIN_PSYCHIC_TRAIT:0 "This species is able to unlock its §YPsychic§! potential."
+	TEC_ASSIMILATION_ALREADY_PSYCHIC:0 "$TRIGGER_FAIL$This species has already unlocked its §YPsychic§! potential."
+ # Energy entities
+	TEC_ASSIMILATION_INVALID_ETHEREAL:0 "$TRIGGER_FAIL$Non corporeal entities can't be assimilated."
+ # Unused
+	TEC_ASSIMILATION_WILL_LOSE_PSIONIC_TRAIT:0 "This species will get its §MPsionic§! connection severed."
+ # Misc
+	TEC_INVALID_ASSIMILATION:0 "$TRIGGER_FAIL$This species cannot be assimilated."
+# /
+# DEBUG
+	TEC_FAILED_TO_DETECT_ASSIMILATION:0 "$TRIGGER_FAIL$This species can't be §YAssimilated§!."
 
- TEC_FAILED_TO_DETECT_ASSIMILATION:0 "$TRIGGER_FAIL$This species can't be §YAssimilated§!."
-
- TEC_TEMP_ASSIMILATION_REGULAR:0 "§YThis species is under regular empire assimilation§!"
- TEC_TEMP_ASSIMILATION_MACHINEPOP:0 "§YThis species should be a machine species assimilated into mechanical species§!"
- TEC_TEMP_ASSIMILATION_ROBOT:0 "§YThis species should be a robot species assimilated into a main robot species§!"
- TEC_TEMP_ASSIMILATION_BIOSERVANT:0 "§YThis species should be a bioservant species assimilated into a main bioservant species§!"
- TEC_TEMP_ASSIMILATION_DEHIVE:0 "§YThis species should be assimilated into getting Hive-Minded trait removed§!"
- TEC_TEMP_ASSIMILATION_FULLORGC:0 "§YThis species should be assimilated into the owner main species§!"
- TEC_TEMP_ASSIMILATION_CIB:0 "§YThis species should be assimilated into cybernetics§!"
- TEC_TEMP_ASSIMILATION_SYNTHETICS:0 "§YThis species should be assimilated into main species synth§!"
- TEC_TEMP_ASSIMILATION_SYNTHS_2:0 "§YThis species should be a robot assimilated into main synth§!"
- TEC_TEMP_ASSIMILATION_PSIONIC:0 "§YThis species should be assimilated into psionic subspecies§!"
- TEC_TEMP_ASSIMILATION_REPLICANT:0 "§YThis species should be assimilated into replicant subspecies§!"
- TEC_TEMP_ASSIMILATION_PUREOFFORM:0 "§YThis species should be assimilated into pure of form psionic§!"
- TEC_TEMP_ASSIMILATION_CIBPSIO:0 "§YThis species should be assimilated into Cyber psionic§!"
- TEC_TEMP_ASSIMILATION_FAILED:0 "§YThis species should not be assimilated§!"
-
-
+	TEC_TEMP_ASSIMILATION_REGULAR:0 "§YThis species is under regular empire assimilation§!"
+	TEC_TEMP_ASSIMILATION_MACHINEPOP:0 "§YThis species should be a machine species assimilated into mechanical species§!"
+	TEC_TEMP_ASSIMILATION_ROBOT:0 "§YThis species should be a robot species assimilated into a main robot species§!"
+	TEC_TEMP_ASSIMILATION_BIOSERVANT:0 "§YThis species should be a bioservant species assimilated into a main bioservant species§!"
+	TEC_TEMP_ASSIMILATION_DEHIVE:0 "§YThis species should be assimilated into getting Hive-Minded trait removed§!"
+	TEC_TEMP_ASSIMILATION_FULLORGC:0 "§YThis species should be assimilated into the owner main species§!"
+	TEC_TEMP_ASSIMILATION_CIB:0 "§YThis species should be assimilated into cybernetics§!"
+	TEC_TEMP_ASSIMILATION_SYNTHETICS:0 "§YThis species should be assimilated into main species synth§!"
+	TEC_TEMP_ASSIMILATION_SYNTHS_2:0 "§YThis species should be a robot assimilated into main synth§!"
+	TEC_TEMP_ASSIMILATION_PSIONIC:0 "§YThis species should be assimilated into psionic subspecies§!"
+	TEC_TEMP_ASSIMILATION_REPLICANT:0 "§YThis species should be assimilated into replicant subspecies§!"
+	TEC_TEMP_ASSIMILATION_PUREOFFORM:0 "§YThis species should be assimilated into pure of form psionic§!"
+	TEC_TEMP_ASSIMILATION_CIBPSIO:0 "§YThis species should be assimilated into Cyber psionic§!"
+	TEC_TEMP_ASSIMILATION_FAILED:0 "§YThis species should not be assimilated§!"
+# /
 
 # Biotrophies additions
 tec_unworthy_biopop_citizenship:0 "$TRIGGER_FAIL$These dirty xeno bioforms are not worthy of our care, and only shall serve our creators."
