--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -727,7 +727,7 @@
  tradition_tec_biological_desc:0 "We have surpassed the limits natural biology imposed on our bodies, and now each single cell of our very selves are a tool to build our future."
 
  tr_tec_biological_adopt:0 "$tradition_tec_biological$ Traditions"
- tr_tec_biological_adopt_tooltip:0 "Allows the construction of £building£ §HXenotransplantation Chambers§!.\nUnlocks the £job_purge£ §HXenoextraction§! purge type.\nBiological species can be harvested for £tec_genetics_icon£ Xenocytes and £society£ Society via Xenotransplantation Chambers or Xenoextraction purge type.\n£tec_genetics_icon£ §YXenocytes§! can be used to §YChange§! and §YUpgrade§! Mutagenic traits."
+ tr_tec_biological_adopt_tooltip:0 "Allows the construction of £building£ §HXenotransplantation Chambers§!.\nUnlocks the £job_purge£ §HXenoextraction§! purge type.\nBiological species can be harvested for $tec_loc_xenocytes$ and £society£ Society via Xenotransplantation Chambers or Xenoextraction purge type.\n$tec_loc_xenocytes$ can be used to §YChange§! and §YUpgrade§! Mutagenic traits."
 
  tr_tec_biological_finish:0 "$tradition_tec_biological$ Traditions Finished"
  tr_tec_biological_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
@@ -742,7 +742,7 @@
 
  tr_tec_biological_3:0 "Directed Mutations"
  tr_tec_biological_3_delayed:0 "Change can be focused towards our interests if we force the manifestation of adequate mutations, later scrubbing undesirable traits, or converting them into desirable ones."
- tr_tec_biological_3_tooltip:0 "Unlocks Mutagenic Traits.\nMutagenic Traits are traits available for Biological Species which get adapted to the main Muta-Genus of the empire, and can be upgraded with £tec_genetics_icon£ §YXenocytes§!."
+ tr_tec_biological_3_tooltip:0 "Unlocks Mutagenic Traits.\nMutagenic Traits are traits available for Biological Species which get adapted to the main Muta-Genus of the empire, and can be upgraded with $tec_loc_xenocytes$."
 
  tr_tec_biological_4:0 "Biomatter Reclamation"
  tr_tec_biological_4_delayed:0 "to do"
